tests/messages/errors/si_error.hl7
MSH|^~\&|TEST_SENDER|FAC|REC|FAC|20260308213000||ADT^A01|MSG_SI_ERR|P|2.5
EVN|A01|20260308213000
PID|||12345||Smith^John
NK1|-1|Smith^Jane
NK1|abc|Smith^Doe
